Core #3405: Extended Viewer